samples/_failures_safe/1761251427_579db5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2eefc81b.c: In function ‘main’:
./samples/SAFE/__tmp_2eefc81b.c:140:14: error: expected ‘)’ at end of input
  140 |     if (scanf
      |        ~     ^
      |              )
./samples/SAFE/__tmp_2eefc81b.c:140:5: error: expected declaration or statement at end of input
  140 |     if (scanf
      |     ^~
